codex-rs/tui/src/status/snapshots/codex_tui__status__tests__transcript_overlay_status_rate_limit_refresh.snap
---
source: tui/src/status/tests.rs
expression: "format!(\"before:\\n{before}\\n\\nafter:\\n{after}\")"
---
before:
/ T R A N S C R I P T / / / / / / / / / / / / / / / / / / / / / / / / / / / / /
/status

╭───────────────────────────────────────────────────────────────────────────╮
│  >_ Corbanu Terminal (v<V>)                                               │
│                                                                           │
│ Visit https://chatgpt.com/codex/settings/usage for up-to-date             │
│ information on rate limits and credits                                    │
│                                                                           │
│  Model:         gpt-5.1-codex-max (reasoning none, summaries auto)        │
│  Directory: [[workspace]]                                                 │
│  Permissions:   Next turn: Custom (workspace with network access, Ask for │
│                 approval)                                                 │
│  Security:      Requested Permissive; effective protection unverified (/  │
│                 security)                                                 │
│  Agents.md:     <none>                                                    │
│                                                                           │
│  Token usage:   0 total  (0 input + 0 output)                             │
│  Limits:        refresh requested; run /status again shortly.             │
╰───────────────────────────────────────────────────────────────────────────╯
~
~
~
~
~
~
───────────────────────────────────────────────────────────────────────── 100% ─
 ↑/↓ to scroll   pgup/pgdn to page   home/end to jump
 q to quit   esc to edit prev


after:
/ T R A N S C R I P T / / / / / / / / / / / / / / / / / / / / / / / / / / / / /
/status

╭────────────────────────────────────────────────────────────────────────────╮
│  >_ Corbanu Terminal (v<V>)                                                │
│                                                                            │
│ Visit https://chatgpt.com/codex/settings/usage for up-to-date              │
│ information on rate limits and credits                                     │
│                                                                            │
│  Model:          gpt-5.1-codex-max (reasoning none, summaries auto)        │
│  Directory: [[workspace]]                                                  │
│  Permissions:    Next turn: Custom (workspace with network access, Ask for │
│                  approval)                                                 │
│  Security:       Requested Permissive; effective protection unverified (/  │
│                  security)                                                 │
│  Agents.md:      <none>                                                    │
│                                                                            │
│  Token usage:    0 total  (0 input + 0 output)                             │
│  spark limit:                                                              │
│  5h limit:       [███████████░░░░░░░░░] 55% left (resets soon)             │
│  Weekly limit:   [██████████████░░░░░░] 70% left (resets later)            │
╰────────────────────────────────────────────────────────────────────────────╯

next message
~
~
───────────────────────────────────────────────────────────────────────── 100% ─
 ↑/↓ to scroll   pgup/pgdn to page   home/end to jump
 q to quit   esc to edit prev
